--- a/source/_posts/鸽巢原理.md
+++ b/source/_posts/鸽巢原理.md
@@ -10,8 +10,8 @@ tags:
 ---
 ### 鸽巢原理
 鸽巢原理，也叫狄利克雷抽屉原理。
-有n个笼子和n+1个鸽子，所有鸽子都被关在鸽笼里，那么至少有一个笼子中有至少2个鸽笼。
-也可以表示成，有n个笼子和kn+1个鸽子，所有鸽子都被关在鸽笼里，那么至少有一个笼子中有至少k+1个鸽笼。
+有n个笼子和n+1个鸽子，所有鸽子都被关在鸽笼里，那么至少有一个笼子中有至少2个鸽子。
+也可以表示成，有n个笼子和kn+1个鸽子，所有鸽子都被关在鸽笼里，那么至少有一个笼子中有至少k+1个鸽子。
 集合论的来理解，若A是n+1元集，B是n元集，则不存在从A到B的单射。
 #### 简单的一些例子：
 例1：盒子有10只黑袜子，12只篮袜子，至少需要拿几只，其必有一对同色的。
