--- a/source/_posts/鸽巢原理.md
+++ b/source/_posts/鸽巢原理.md
@@ -41,7 +41,7 @@ $\Rightarrow$ $S_{60}=a_1+a_2+...+a_{60}=100$
 显然，$S_1 \lt S_2 \lt ... \lt S_{60}$
 构造新序列：$S_1+19, S_2+19, ..., S_{60}+19$
 显然：$S_1+19 \lt S_2+19 \lt ... \lt S_{60}+19=119$
-而$S_1, S_2, ..., S_{60}, S_1+19, S_2+19, ..., S_{60}+19$一共为120个正整数，则由鸽巢原理（共h119个鸽笼，有120个鸽子），可知其中必存在两数相等。
+而$S_1, S_2, ..., S_{60}, S_1+19, S_2+19, ..., S_{60}+19$一共为120个正整数但是范围是在$1~119$，则由鸽巢原理（共119个鸽笼，有120个鸽子），可知其中必存在两数相等。
 又因为$\{S_i\}$递增，$\{S_i+19\}$也递增。
 故，存在$i,j(i>j)$，使得
 $S_i=S_j+19$
@@ -53,10 +53,10 @@ $\Rightarrow S_1=a_1$
 $\Rightarrow S_2=a_1+a_2$
 ...
 $\Rightarrow S_{100}=a_1+a_2+...+a_{100} \le 160$
-显然$S_1 \lt S_2 \lt ... \lt S_{60}$
+显然$S_1 \lt S_2 \lt ... \lt S_{100}$
 构造新序列： $S_1+39, S_2+39, ..., S_{100}+39$
 显然：$S_1+39 \lt S_2+39 \lt ... \lt S_{100}+39=199$
-而$S_1, S_2, ..., S_{100}, S_1+39, S_2+39, ..., S_{100}+39$一共为199个正整数，则由鸽巢原理（共h199个鸽笼，有200个鸽子），可知其中必存在两数相等。
+而$S_1, S_2, ..., S_{100}, S_1+39, S_2+39, ..., S_{100}+39$一共为199个正整数但是范围是在$1~199$，则由鸽巢原理（共199个鸽笼，有200个鸽子），可知其中必存在两数相等。
 又因为$\{S_i\}$递增，$\{S_i+39\}$也递增。
 故，存在$i,j(i>j)$，使得
 $S_i=S_j+39$
