--- a/source/_posts/从头开始之思维训练.md
+++ b/source/_posts/从头开始之思维训练.md
@@ -41,3 +41,22 @@ dp[i][j]表示[i, j]区间的方案数。
 #### 51nod 1623 完美消除
 先考虑如何计算一个数的最小操作数，只要维护一个栈，每次把比当前栈大的数弹出，如果栈中没有这个数就把操作数+1。
 实际上可以用一个int来状压这个栈，然后需要注意的就是初始state = (1 << 0)，因为0是不会增加操作数的，剩下就是数位DP的套路了。
+
+#### hackerrank-sam-and-sub-strings 
+给一个很长的数字字符串，求这个串所有子串加起来的值。
+
+状态表示： $dp[i]$以i结尾字符串的贡献
+转移方程： $dp[i]=dp[i-1] * 10+(i+1) * s[i]$
+
+
+#### HackerRank-Euqal
+给一些数字，每次操作可以选一个数不变，其余所有数都加上1、2、5。
+要求最少的次数使得所有的数都相同。
+
+逆向想一下，每次操作一个数，让这个数减1、2、5, 最后使得每个数相同。
+自然就想到了所有数都减到``min{a[i]}``。
+每个数的操作次数是 $k=(x-min)/5+((x-m)\%5)/2+((x-m)\%5)\&1$
+答案就是每个数操作次数之和
+
+trick:
+但是并不一定是减到``min{a[i]}``是最优的，也有可能是``min{a[i]}-1``, ``min{a[i]}-2``, ``min{a[i]}-3``, ``min{a[i]}-4``,但不可能比最小值小5,这说明每个数都需要减一个5。
